# imgpipe

./: .gitignore  CMakeLists.txt
scr/: main.cpp
scr/cli/: ArgumentParser.cpp  ArgumentParser.hpp
